devscripts (2.10.15) UNRELEASED; urgency=low

  [ Patrick Schoenfeld ]
  * checkbashisms: Add a check for the $(<) bashism (which is catting a file)
    (Closes: #463743)
  * dget: Implemented a '--build' parameter which builds a package with
    dpkg-buildpackage after its download (Closes: #457977)

  [ Adam D. Barratt ]
  * checkbashisms:
    + Replace use of non-existent fail() with die()
    + Correct the fix for #461653. >& is permitted by POSIX, &> isn't. Thanks
      to Sven Joachim.
    + Modify the "echo -e", "exec -[acl]" and "let" tests to require
      whitespace before the matched text in order to reduce false positives.
      Thanks to Russ Allbery for pointing the issue out.
  * debchange: Allow the use of an unknown / unofficial distribution to be
    forced (Closes: #463449)
  * bts:
    + Allow the generated e-mail to be edited before sending
      (Closes: #456331)
    + Handle cache files generated by versions of bts that didn't name
      attachments correctly (Closes: #464079)
  * uscan:
    + Fix quoting of a manpage example (Closes: #452934)
    + Output a message if --report-status was used but no watch file was found
      (Closes: #409128)
  * debuild: Recognise -j as a valid option when it's passed on the command line
    as well as in the configuration file (Really closes: #457235)
  * debcommit: Check the debian directory for indications of version control
    to handle situations where the upstream source and packaging are managed
    through different VCSes (Closes: #384230)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 05 Feb 2008 19:51:44 +0000

devscripts (2.10.14) unstable; urgency=low

  [ Adam D. Barratt ]
  * uscan:
    + Document the USCAN_DESTDIR configuration variable (Closes: #460717)
    + uscan: Correctly set the default User-Agent header (Closes: #462770)
  * bts:
    + Fix downloading of named attachments (Closes: #460850)
    + Add support for setting X-Debbugs-No-Ack (Closes: #458973)